--- a/places.css
+++ b/places.css
@@ -70,8 +70,8 @@ main h2{
     grid-area:h2;
     margin-right: auto;
     margin-left: auto;
+    padding-left:15px;
     margin-top: 15px;
-    color: white;
     text-shadow: 0px 0px 5px black;
 }
 footer{
