--- a/places.css
+++ b/places.css
@@ -70,7 +70,8 @@ main h2{
     grid-area:h2;
     margin-right: auto;
     margin-left: auto;
-    padding-left:15px;
+    padding-left:25px;
+    padding-right:25px;
     margin-top: 15px;
     text-shadow: 0px 0px 5px black;
 }
