--- a/about.css
+++ b/about.css
@@ -9,8 +9,8 @@
     height:100vh;
     overflow-y: auto;
     display: grid;
-    grid-template-rows: 70px 1fr 500px 1fr;
-    grid-template-columns: 1fr 400px 1fr;
+    grid-template-rows: 70px 1fr minmax(1fr,500px) 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: 
     "header header header"
     ". . ."
@@ -23,6 +23,7 @@ main{
     background: rgba(0,0,0,0.7);
     grid-area: main;
     display: grid;
+    max-width:400px;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: 
