--- a/about.css
+++ b/about.css
@@ -9,7 +9,7 @@
     height:100vh;
     overflow-y: auto;
     display: grid;
-    grid-template-rows: 70px 1fr minmax(1fr,500px) 1fr;
+    grid-template-rows: 70px 1fr 500px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: 
     "header header header"
